[package]
name = "spawn-editor"
version = "0.0.2"
authors = ["Erik Zscheile <erik.zscheile@gmail.com>"]
description = "Contains utility functions to spawn a text editor"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zserik/spawn-editor-rs"

[dependencies]
default-editor = "0.1.0"
failure = "0.1.5"
